crates/reap-pm-live/tests/ui/sealed_evidence_backend_is_internal.rs
use reap_pm_live::{PmJournalRuntime, PmSealedJournalProjection};

fn main() {
    let _: Option<PmJournalRuntime> = None;
    let _: Option<PmSealedJournalProjection> = None;
}
